# matrixserver

./: .clang-format  .clang-tidy  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.arm64  Dockerfile.arm64.release  Dockerfile.release  README.md  docker-compose.yml  entrypoint.sh  matrixServerConfig.json  next_refactoring_steps.md  nginx.conf  simulator_config.json  troubleshooting.md
.github/workflows/: create-release.yml  docker-build-push-rgb-matrix.yml  docker-build-push-rpi.yml  docker-build-push-simulator-arm64.yml  docker-build-push.yml
MainMenu/: CMakeLists.txt  main.cpp  mainmenu.cpp  mainmenu.h
MainMenuLVGL/: CMakeLists.txt  main.cpp
application/: ADS1000.cpp  ADS1000.h  AnimationParams.cpp  AnimationParams.h  CMakeLists.txt  ConnectionFactory.cpp  ConnectionFactory.h  CubeApplication.cpp  CubeApplication.h  Font6px.cpp  Font6px.h  Image.cpp  Image.h  InputState.cpp  InputState.h  LoopRunner.cpp  LoopRunner.h  MatrixApplication.cpp  MatrixApplication.h  MatrixApplicationStandalone.cpp  MatrixApplicationStandalone.h  MessageDispatcher.h  Mpu6050.cpp  Mpu6050.h
application/tests/: CMakeLists.txt  Mpu6050_test.cpp
application/ui/: ActionMenuItem.cpp  ActionMenuItem.h  BackMenuItem.cpp  BackMenuItem.h  CheckboxMenuItem.cpp  CheckboxMenuItem.h  Menu.cpp  Menu.h  MenuInputMapping.h  MenuItem.cpp  MenuItem.h  MenuNavigator.cpp  MenuNavigator.h  MenuUI.h  MenuView.h  SliderMenuItem.h  StatusBar.cpp  StatusBar.h  SubmenuMenuItem.cpp  SubmenuMenuItem.h
common/: CMakeLists.txt  Cobs.cpp  Cobs.h  Color.cpp  Color.h  IpcConnection.cpp  IpcConnection.h  IpcServer.cpp  IpcServer.h  Joystick.cpp  Joystick.h  MessageDispatcher.cpp  MessageDispatcher.h  Screen.cpp  Screen.h  SocketConnection.cpp  SocketConnection.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  UniversalConnection.h  UnixSocketClient.cpp  UnixSocketClient.h  UnixSocketServer.cpp  UnixSocketServer.h
common/protobuf/: matrixserver.proto
renderer/: CMakeLists.txt  IBidirectionalRenderer.h  IRenderer.h
renderer/FPGAFTDIRenderer/: CMakeLists.txt  FPGARendererFTDI.cpp  FPGARendererFTDI.h
renderer/FPGAFTDIRenderer/mpsse/: mpsse.c
renderer/FPGASPIRenderer/: CMakeLists.txt  FPGARendererRPISPI.cpp  FPGARendererRPISPI.h
renderer/RGBMatrixRenderer/: CMakeLists.txt  RGBMatrixRenderer.cpp  RGBMatrixRenderer.h
renderer/RGBMatrixRenderer/imu/: CMakeLists.txt  Imu.cpp  Imu.h  SerialPort.cpp  SerialPort.h
renderer/SimulatorRenderer/: SimulatorRenderer.cpp  SimulatorRenderer.h
renderer/WebSocketSimulatorRenderer/: CMakeLists.txt  WebSocketSimulatorRenderer.cpp  WebSocketSimulatorRenderer.h  WsSession.h
server/: App.cpp  App.h  CMakeLists.txt  DefaultAppLauncher.cpp  DefaultAppLauncher.h  RendererRegistry.cpp  RendererRegistry.h  Server.cpp  Server.h  ServerBootstrap.cpp  ServerBootstrap.h  ServerSetup.cpp  ServerSetup.h
server_FPGA/: main.cpp
server_FPGA_FTDI/: CMakeLists.txt  main.cpp
server_FPGA_RPISPI/: CMakeLists.txt  main.cpp
server_RGBMatrix/: CMakeLists.txt  main.cpp
server_hardware/: CMakeLists.txt  main.cpp
server_simulator/: CMakeLists.txt  main.cpp
server_testapp/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  catch.hpp  test-unixSocket.cpp  tests-animationparams.cpp  tests-cobs-stream.cpp  tests-cobs.cpp  tests-color.cpp  tests-connection-factory.cpp  tests-input-state.cpp  tests-joystick.cpp  tests-message-dispatcher.cpp  tests-screen.cpp  tests-tcp.cpp
